[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Backend_Pract <andreyka.lysenko.2002@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
